@@ -1,5 +1,6 @@
 4.2.3 UNRELEASED
 - Fix DocBook4 entity text, BZ #1143060
+- Remove extra white space from non-verbatim msgid's. BZ #1143792
 
 4.2.2 Wed Sep 17 2014
 - Fix duplicate messages in POT files. BZ #1136133
